--- a/index.html
+++ b/index.html
@@ -342,10 +342,10 @@
        <footer class="bg-[#179800]  relative">
            <div class="flex flex-col sm:flex-row justify-evenly items-center gap-5 bg-[#EFEBE3] w-[85%] rounded-md absolute -top-[320px] sm:-top-[170px] left-[7.5%] py-10">
               <img class="h-[10%] sm:w-[30%]" src="/c2-assets/vegetable-busket.png" alt="">
-              <div>
+              <div class="text-center sm:text-left">
                  <h2 class="text-3xl font-bold ">Get Grocery News!</h2>
                  <p class="py-5 ">Exclusive training tips, ticks, product deals and more.</p>
-                 <input type="email" class="flexitems-center px-3 py-2 mb-5 w-[90%]" placeholder="enter email...">
+                 <input type="email" class="flexitems-center text-left px-3 py-2 mb-5 w-[90%]" placeholder="enter email...">
                  <button class="text-white py-2 px-6 bg-[#179800] rounded-md">Subscribe</button>
               </div>
            </div>
